Product List part 1

--- a/styles/SearchBar.module.scss
+++ b/styles/SearchBar.module.scss
@@ -7,7 +7,7 @@
     margin: auto;
     //min-height: 52px;
     //justify-content: center;
-    //margin-bottom: 16px;
+    margin-bottom: 16px;
     float: left;
     display: block;
 }
