--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -2,4 +2,6 @@ $font-stack: Helvetica, sans-serif;
 $primary-bar: #ffe600;
 $primary-black: #333333;
 $primary-grey: #999999;
+$seconday-grey: #666666;
 $primary-white: #eeeeee;
+$ic-shipping-big: '../Assets/ic_shipping@2x.png.png';
