--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import '_colors';
+
 html,
 body {
     padding: 0;
@@ -13,4 +15,8 @@ a {
 
 * {
     box-sizing: border-box;
+}
+
+body{
+    background-color: $primary-grey;
 }
