--- a/styles/CardProduct.module.scss
+++ b/styles/CardProduct.module.scss
@@ -1,101 +1,56 @@
 @import "_colors";
+@import "_medidas";
 
 .routeMap {
-  //position: absolute;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  width: 80%;
-  font-size: 14px;
   margin: auto;
+  padding-top: $padding-desktop;
+  padding-bottom: $padding-desktop;
+  width: $w-desktop;
+  font-size: $f-route-map;
   color: $seconday-grey;
 }
+
 .card {
-  //box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  //width: 80%;
-  //margin: auto;
-  //text-align: center;
-  //font-family: arial;
-  //border: 1em;
-  //display: flex;
-  //padding: 16px;
-  width: 80%;
+  display: flex;
+  flex-direction: row;
   margin: auto;
-  margin: auto;
+  width: $w-desktop;
   background-color: $primary-white;
-  display: flex;
-  flex-direction: row;
-  padding: 16px
-
-  //flex-wrap: nowrap;
+  .productImage {
+    margin: $padding-desktop;
+    width: $img-size-q-desktop;
+    height: $img-size-q-desktop;
+    cursor: pointer;
+  }
+  .details {
+    flex-wrap: wrap;
+    flex-direction: row;
+    .price {
+      display: flex;
+      flex-direction: row;
+      min-width: 740px;
+      padding-bottom: $m-desktop;
+      padding-top: $m-desktop;
+      gap: $gap-desktop;
+      font-size: $f-size-label-desktop;
+    }
+  }
 }
 
-.card .productImage {
-  border-radius: 4px;
-  padding-right: 16px;
-  width: 180px;
-  height: 180px;
-  
+.sectionAddress {
+  padding-bottom: $m-desktop;
+  padding-top: $m-desktop;
+  .address {
+    font-size: $f-size-12-desktop;
+    padding-bottom: $m-desktop;
+    padding-top: $m-desktop;
+  }
 }
 
-.card .details {
-  flex-wrap: wrap;
-  flex-direction: row;
-
-  //width: 80%;
-  //display: flex;
-  //flex-wrap: wrap;
-}
-.headPrice {
-  //display: flex;
-  //flex-direction: row;
-  //flex-wrap: nowrap;
-  //align-items: center;
-  //height: 24px;
-  //align-items: flex-start;
-  //width: 32px;
-  //position: relative;
-}
-.price {
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-  padding-bottom: 32px;
-  min-width: 740px;
-}
-.price .label {
-  font-size: 24px;
-  min-width: 32px;
-}
-
-.description {
-  font-size: 18px;
-  width: 32px;
-  //width: 10%;
-  //justify-content: flex-start;
-}
-
-.stock {
-  color: grey;
-  font-size: 18px;
-  width: 32px;
-  //width: 10%;
-  //justify-content: flex-start;
-}
-
-.ldabel {
-  color: grey;
-  font-size: 12px;
-  width: 200px;
-}
-
-.headPrice .shipping {
-  background: url($ic-shipping-big);
-  background-repeat: no-repeat;
-  //background-position: center;
-
-  //margin-right: -48px;
-  //float: right
-
-  //  height:100%;
-  //width:100%;
+.information {
+  span {
+    display: flex;
+    flex-direction: row;
+    font-size: $f-size-desktop;
+  }
 }
