--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -4,5 +4,4 @@ $primary-black: #333333;
 $primary-grey: #999999;
 $seconday-grey: #666666;
 $primary-white: #eeeeee;
-$primary-btn-blue: #3483FA;
-$ic-shipping-big: '../Assets/ic_shipping@2x.png.png';
+$primary-btn-blue: #3483fa;
