--- a/styles/_medidas.scss
+++ b/styles/_medidas.scss
@@ -7,5 +7,8 @@ $padding-desktop: 16px;
 $gap-desktop: 16px;
 $f-route-map: 14px;
 $w-desktop: 80%;
-
+$breakpoint-mobile: 320px;
+$breakpoint-tablet: 481px;
+$breakpoint-laptop: 769px ;
+$breakpoint-monitor:1025px;
 
