--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,8 +1,8 @@
-@import "_colors";
+@import '_colors';
 
 html,
 body {
-    margin: 0;    
+    margin: 0;
     font-family: $font-stack;
     background-color: $primary-grey;
     color: $primary-black;
